[tool.poetry]
name = "poetry-docker"
version = "0.1.0"
description = ""
authors = ["Casey Carlsen <casey.carlsen@kohls.com>"]
readme = "README.md"
packages = [{include = "poetry_docker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
